# agent-trace-opentelemetry

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
examples/: README.md  test_all_events.py
examples/hooks/claude-code/: README.md  settings.json
examples/hooks/cursor/: README.md
examples/hooks/cursor/.cursor/: hooks.json
src/: README.md
src/agent_trace/: __init__.py  cli.py  constants.py  models.py  tracer.py  utils.py
tests/: __init__.py  test_models.py  test_tracer.py
